* Fix Bug #1161911 File sizes are wrong (regular files)
* Fix RFE #1162569 Support for long filenames (backups)
* Fix RFE #1206531 Volume label for DVD
* Fix REF #1144905 DVD iso flags
* Fix Bug #1243700 Exit with "Killed" error when burning to CD
* Fix Bug #1241361 Segfault when burning data DVD
* Fix Bug #1214261 GnomeBaker reports an error and core dumps
* Start using glib g_spawn code as it's better than the exec code I wrote.
* Fix threading problem which would crash GB on some machines.
* Fix regression in audio cd copying.
* Apply patch from Jens Georg so that we use gstreamer to read tags.
* Apply patch #1258427 from domg to correct disk ejection on FreeBSD
* Updated russian translation from Alexandre Prokoudine
* Update french translation from Nicolas Boos

Version 0.4

* Fix data cd size typo from 600MB to 650MB.
* Add 800MB and 90min cd sizes.
* Right click menus now have icons and right click on a CD image gives option to burn it.
* Right click/double click in filebrowser gives option to open files via their mime type.
* Right click/double click in audio disc tab gives option to launch audio file in media player.
* Add cue bin support via cdrdao.
* Directories can now be added to the audio cd and all audio files within the dir will be added.
* Add on the fly burning for data cds.
* Options enabled to choose joliet and/or rockridge when burning data cds/dvds.
* Make sure author and gpl headers are inserted in all files.
* Upgrade to automake 1.9.
* Fix Bug #1118084 Mount point for writing device could not be obtained.
* Fix Bug #1187453	problem w/ " datacd.c " file
* Fix Bug #1185537	Crash on filenames containing #'s
* Fix Bug #1183636	There should be an Overburn Option
* Fix Bug #1178142	gnomebaker 0.3 segfaults with strange file names
* Fix Bug #1173456	problem in audio.c file
* Fix Bug #1173357	change [ for %5d
* Fix Bug #1173216	Directory drag'n drop to audio CD
* Fix Bug #1173215	Double click in tree view should expand/collapse